# src/types.ts
@@ -45,7 +45,7 @@ export type ReviewBatch = Schemas['ReviewBatchRead'];
 export type Customer = Schemas['CustomerRead'];
 export type Fact = Omit<Schemas['FactRead'], 'status'> & { status: FactStatus };
 export type ProjectSummary = Schemas['ProjectSummary'];
-export type ProjectV2 = Schemas['ProjectV2Read'];
+export type Project = Schemas['ProjectRead'];
 export type KnowledgeFactProjectOverview = Schemas['KnowledgeFactProjectOverview'];
 export type KnowledgeFactCustomerOverview = Schemas['KnowledgeFactCustomerOverview'];
 export type KnowledgeFactsOverview = Schemas['KnowledgeFactsOverview'];
